Separate into different files

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,9 @@ canvas {
   image-rendering: -o-crisp-edges; /* OS X & Windows Opera (12.02+) */
   image-rendering: pixelated; /* Awesome future-browsers       */
   -ms-interpolation-mode: nearest-neighbor; /* IE                            */
-  transform: scale(3);
   transform-origin: 0 0;
+}
+
+body {
+  margin: 0;
 }
